[package]
name = "blockchain_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.9.0"
ripemd = "0.1.3"
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
